[workspace]
members = [
  "crates/unen",
  "crates/unen_app",
  "crates/unen_event",
  "crates/unen_event_derive",
  "crates/unen_logging",
  "crates/unen_net",
  "crates/unen_render",
  "crates/unen_window",
  "crates/unen_winit",
]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/UnnamedEngine/unen"
keywords = ["unen"]

[profile.release]
strip = true

[workspace.dependencies]
unen = { version = "0.0.1" }
unen_app = { version = "0.0.1" }
unen_event = { version = "0.0.1" }
unen_event_derive = { version = "0.0.1" }
unen_logging = { version = "0.0.1" }
unen_net = { version = "0.0.1" }
unen_render = { version = "0.0.1" }
unen_window = { version = "0.0.1" }
unen_winit = { version = "0.0.2" }

# Logging
log = { version = "0.4.28" }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20" }

# Error Handling
thiserror = { version = "2.0.17" }

# Derive Macros
syn = { version = "2.0.106", features = ["full"] }
quote = { version = "1.0.41" }
proc-macro2 = { version = "1.0.101" }

# Algorithm
bincode = { version = "2.0.1", features = ["serde"] }
crc32fast = { version = "1.5.0" }

# Execution
signal-hook = { version = "0.3.18" }
pollster = { version = "0.4.0" }

# Rendering
winit = { version = "0.30.12", features = ["android-native-activity"] }
wgpu = { version = "27.0.1", features = ["webgl"] }
raw-window-handle = { version = "0.6.2" }

# Web
console_error_panic_hook = { version = "0.1.7" }
console_log = { version = "1.0.0" }
wasm-bindgen = { version = "0.2.104" }
wasm-bindgen-futures = { version = "0.4.54" }
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
