[package]
name = "unen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_app = { path = "../unen_app" }
unen_core = { path = "../unen_core" }
unen_event = { path = "../unen_event", features = ["derive"] }
unen_logging = { path = "../unen_logging", features = ["tracing"] }
unen_runner = { path = "../unen_runner" }
unen_winit = { path = "../unen_winit" }
unen_render = { path = "../unen_render" }

[[example]]
name = "basic_app"
path = "examples/basic_app.rs"

[[example]]
name = "window_app"
path = "examples/window_app.rs"
