[package]
name = "unen"
description = "UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_app = { version = "0.0.1" }
unen_event = { version = "0.0.1", features = ["derive"] }
unen_logging = { version = "0.0.1", features = ["tracing"] }
unen_winit = { version = "0.0.1" }
unen_render = { version = "0.0.1" }

[[example]]
name = "basic_app"
path = "examples/basic_app.rs"

[[example]]
name = "window_app"
path = "examples/window_app.rs"
