[package]
name = "unen"
description = "UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_app = { workspace = true }
unen_event = { workspace = true, features = ["derive"] }
unen_logging = { workspace = true, features = ["tracing"] }
unen_shard = { workspace = true }
unen_winit = { workspace = true }
unen_render = { workspace = true }

[[example]]
name = "basic_app"
path = "examples/basic_app.rs"

[[example]]
name = "window_app"
path = "examples/window_app.rs"

[[example]]
name = "basic_shard"
path = "examples/basic_shard.rs"
