[package]
name = "unen_event"
description = "Event crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = []
derive = ["unen_event_derive"]

[dependencies]
unen_event_derive = { version = "0.0.1", optional = true }
