[package]
name = "unen_gpu"
description = "GPU crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_app = { workspace = true }

pollster = { workspace = true }
wgpu = { workspace = true }
