[package]
name = "unen_logging"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = []
tracing = ["tracing-subscriber"]

[dependencies]
unen_app = { path = "../unen_app" }

log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
