[package]
name = "unen_logging"
description = "Logging crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = []
tracing = ["tracing-subscriber"]

[dependencies]
unen_app = { version = "0.0.1" }

log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
