[package]
name = "unen_net"
description = "Networking crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
thiserror = { workspace = true }

bincode = { workspace = true }
crc32fast = { workspace = true }
