[package]
name = "unen_render"
description = "Rendering crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_app = { path = "../unen_app" }
unen_event = { path = "../unen_event" }
unen_window = { path = "../unen_window" }

tracing = { workspace = true }

pollster = { workspace = true }

wgpu = { workspace = true }
raw-window-handle = { workspace = true }
