[package]
name = "unen_render"
description = "Rendering crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_app = { version = "0.0.1" }
unen_event = { version = "0.0.1" }
unen_window = { version = "0.0.1" }

tracing = { workspace = true }

pollster = { workspace = true }

wgpu = { workspace = true }
raw-window-handle = { workspace = true }
