[package]
name = "unen_render"
description = "Rendering crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_app = { workspace = true }
unen_event = { workspace = true }
unen_window = { workspace = true }

tracing = { workspace = true }

pollster = { workspace = true }

wgpu = { workspace = true }
raw-window-handle = { workspace = true }
