[package]
name = "unen_resource"
description = "Resource crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_app = { workspace = true }

tracing = { workspace = true }

serde = { workspace = true }
