[package]
name = "unen_shard"
description = "Shard crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_app = { workspace = true }

tracing = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }
url = { workspace = true }
email_address = { workspace = true }
