[package]
name = "unen_texture"
description = "Texture crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_app = { workspace = true }
unen_resource = { workspace = true }

image = { workspace = true }
wgpu = { workspace = true }
