[package]
name = "unen_window"
description = "Window crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_event = { version = "0.0.1", features = ["derive"] }

log = { workspace = true }

wgpu = { workspace = true }
raw-window-handle = { workspace = true }
