[package]
name = "unen_window"
description = "Window crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_event = { workspace = true, features = ["derive"] }

wgpu = { workspace = true }
raw-window-handle = { workspace = true }
