[package]
name = "unen_winit"
description = "Winit crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_app = { path = "../unen_app" }
unen_event = { path = "../unen_event" }
unen_window = { path = "../unen_window" }
unen_logging = { path = "../unen_logging", features = ["tracing"] }
unen_render = { path = "../unen_render" }

log = { workspace = true }

pollster = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
