[package]
name = "unen_winit"
description = "Winit crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_app = { version = "0.0.1" }
unen_window = { version = "0.0.1" }
unen_logging = { version = "0.0.1", features = ["tracing"] }
unen_render = { version = "0.0.1" }

log = { workspace = true }

pollster = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
