[package]
name = "unen_winit"
description = "Winit crate for UnnamedEngine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
unen_app = { workspace = true }
unen_window = { workspace = true }
unen_logging = { workspace = true, features = ["tracing"] }
unen_render = { workspace = true }

tracing = { workspace = true }

pollster = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
